# llm-council

./: .coverage  .dockerignore  .env.example  .gitignore  CLEANUP-STATUS.md  COMMIT_MESSAGE.txt  README.md  RENAME-INSTRUCTIONS.md  SETUP-SCRIPT-UPDATED.md  VIBE-CODING-SKILL-SETUP.md  backend.Dockerfile  complete-cleanup.sh  docker-compose.yml  frontend.Dockerfile  link-vibe-coding-skill.sh  pyproject.toml
.claude-skills/: CENTRAL-SKILLS-SETUP.md  SETUP-COMPLETE.md  llm-council-dev-process
backend/: config.py  main.py  openrouter.py
docs/: API.md  README.md
docs/skills/: MIGRATION.md
frontend/: vite.config.js
frontend/src/: api.js
project management/: Backlog.md  ImplementationPlan.md  PRD.md  ProductOverview.md  ProjectConventions.md  TechnicalSpec.md
project management/versions/v1.0/: PRD-v1.0.md  ReleaseNotes-v1.0.md
project management/versions/v1.1/: ImplementationPlan-v1.1.md  PRD-v1.1.md  TechnicalSpec-v1.1.md
project management/versions/v1.2/: ImplementationPlan-v1.2.md  PRD-v1.2.md  TechnicalSpec-v1.2.md  TestPlan-v1.2.md
scripts/: rename-to-skills.sh  setup-skill.sh
tests/: __init__.py
tests/backend/integration/: __init__.py  test_api_auth.py  test_api_cors.py  test_api_docs.py  test_api_headers.py  test_api_status.py  (+3 more)
tests/frontend/: __init__.py
tests/integration/: __init__.py  test_api_documentation.py  test_docker_compose.py  test_documentation.py  test_frontend_v1_migration.py  test_hot_reload.py  test_native_compatibility.py
utilities/: check_env_file.py  diagnose_env.py  test_openrouter_key.py  update_env_key.py
(+4 files in other folders)
